Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1213 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -25,7 +25,7 @@ The project also analyzes the uncertainty associated with sets of model predicti
 = Development =
 == [Models] ==
 
-The model as a whole consists of many components, from transmission to within-host parasite dynamics to drug action.
+Each simulation requires implementation of various components, from transmission to within-host parasite dynamics to drug action.
 
 For an overview of the model-components represented, see (TODO). For a list of papers describing some part of the model, see (TODO).
 
