--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,6 +8,7 @@
   * *[XmlScenario Inputs: creating a scenario]*
      * [XmlMonitoring Monitoring measures]
      * [XmlEntoVector Vector-transmission parameters]
+     * [XmlUpdateScenario Updating schema version]
   * *[OutputFiles Outputs: interpreting results]*
      * LiveGraph
 
