--- a/wiki/XmlUpdateScenario.wiki
+++ b/wiki/XmlUpdateScenario.wiki
@@ -5,4 +5,7 @@
 If you use some scenarii using an older schema version, you can update those with the schema translator. The translation may not work for some scenarios (The program will output the parameters you have to change or/and add manually and exit). 
 
 
-= The schema translator binaries =
+== The schema translator binaries ==
+
+
+== Install and Usage ==
