--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -10,7 +10,14 @@
 
 This output format was introduced in schema version 19; some outputs were added later. There's no central list of these outputs in the code; instead search for calls to `Continuous::registerCallback` -- it's first argument should correspond to the output identifier in the table below.
 
-The following outputs are currently available (note: keep spaces between words as spaces in XML). All not otherwise specified are point-time outputs.
+The following outputs are currently available, and can be enabled by adding a sub-element to `continuous` within the monitoring section of the XML, for example:
+{{{
+<continuous period="1">
+  <option name="input EIR" value="true"/>
+</continuous>
+}}}
+
+All options not otherwise specified are point-time outputs.
 
 || output || description ||
 || recent births || Number of new humans since last report ||
@@ -27,41 +34,47 @@ The following outputs are currently available (note: keep spaces between words a
 
 == Survey measures ==
 
-This element controls which survey measures are [OutputFiles#measures output]. (Omitting an option has the same effect as listing it with value "false".) The "measure" in the table should be input into the XML to enable an output, which will appear in the `output.txt` with a numeric "id" (also below).
+The `SurveyOptions` element controls which survey measures are [OutputFiles#measures output]. Omitting an option has the same effect as listing it with value "false". The "measure" in the table should be input into the XML to enable an output, which will appear in the `output.txt` with a numeric "id" (also below). Configuration example:
+{{{
+<SurveyOptions>
+  <option name="nHost" value="true"/>
+  <option name="nPatent" value="true"/>
+</SurveyOptions>
+}}}
 
-These tables come from [http://code.google.com/p/openmalaria/source/browse/trunk/include/Monitoring/Survey.h this file] in the code.
+These tables come from [http://code.google.com/p/openmalaria/source/browse/trunk/include/Monitoring/Survey.h this file] in the code. The "cohort" column indicates whether, when cohort mode is enabled, this output is restricted to the cohort; if false, it is unaffected by the cohort mode.
 
-|| id || measure || description ||
-||  0 || nHost  ||  Total number of humans ||
-||  1 || nInfect  ||  number of infected hosts  ||
-|| 2 || nExpectd  ||  expected number of infected hosts ||
-|| 3 || nPatent  ||  number of patent hosts ||
-|| 4 || sumLogPyrogenThres  ||  Sum of the log of the pyrogen threshold ||
-|| 5 || sumlogDens  ||  Sum of the logarithm of the parasite density ||
-|| 6 || totalInfs  ||  Total infections ||
-|| 7 || nTransmit || Infectiousness of human population to mosquitoes. Number of hosts transmitting to mosquitoes (i.e. sum of proportion of mosquitoes that get infected). Single value, not per age-group. ||
-|| 8 || totalPatentInf  ||  Total patent infections ||
-|| 10 || sumPyrogenThresh  ||  Sum of the pyrogenic threshold ||
-|| 11 || nTreatments1  ||  number of treatments (1st line) ||
-|| 12 || nTreatments2  ||  number of treatments (2nd line) ||
-|| 13 || nTreatments3  ||  number of treatments (inpatient) ||
-|| 14 || nUncomp  ||  number of episodes (uncomplicated) ||
-|| 15 || nSevere  ||  number of episodes (severe) ||
-|| 16 || nSeq  ||  cases with sequelae ||
-|| 17 || nHospitalDeaths  ||  deaths in hospital ||
-|| 18 || nIndDeaths  ||  number of deaths (indirect) ||
-|| 19 || nDirDeaths  ||  number of deaths (direct) ||
-|| 20 || nEPIVaccinations  ||  number of EPI vaccine doses given ||
-|| 21 || allCauseIMR || all cause infant mortality rate (returned as a single number over whole intervention period, instead of from a survey interval) ||
-|| 22 || nMassVaccinations  ||  number of Mass / Campaign vaccine doses given ||
-|| 23 || nHospitalRecovs  ||  recoveries in hospital ||
-|| 24 || nHospitalSeqs  ||  sequelae in hospital ||
-|| 25 || nIPTDoses  ||  number of IPT Doses ||
-|| 26 || annAvgK   || Annual Average Kappa. Calculated once a year as sum of human infectiousness divided by initial EIR summed over a year. Single value, not per age-group. ||
-|| 27 || nNMFever  ||  Number of episodes (non-malaria fever) ||
-|| 28 || innoculationsPerDayOfYear  ||  Inoculations per human (all ages) per day of year, over the last year. ||
-|| 29 || kappaPerDayOfYear  ||  Kappa (human infectiousness) weighted by availability per day-of-year for the last year. ||
-|| 30 || innoculationsPerAgeGroup || The total number of inoculations per age group, summed over the reporting period. ||
+|| id || measure || cohort || description ||
+||  0 || nHost  || y ||  Total number of humans ||
+||  1 || nInfect  || y || number of infected hosts  ||
+|| 2 || nExpectd  || y ||  expected number of infected hosts ||
+|| 3 || nPatent  || y || number of patent hosts ||
+|| 4 || sumLogPyrogenThres || y ||  Sum of the log of the pyrogen threshold ||
+|| 5 || sumlogDens  || y||  Sum of the logarithm of the parasite density ||
+|| 6 || totalInfs  || y|| Total infections ||
+|| 7 || nTransmit ||n|| Infectiousness of human population to mosquitoes. Number of hosts transmitting to mosquitoes (i.e. sum of proportion of mosquitoes that get infected). Single value, not per age-group. ||
+|| 8 || totalPatentInf  ||y||  Total patent infections ||
+|| 10 || sumPyrogenThresh  ||y||  Sum of the pyrogenic threshold ||
+|| 11 || nTreatments1  ||n|| 5-day timestep model: number of treatments (1st line) ||
+|| 12 || nTreatments2  ||n|| 5-day timestep model: number of treatments (2nd line) ||
+|| 13 || nTreatments3  ||n|| 5-day timestep model: number of treatments (inpatient) ||
+|| 14 || nUncomp  ||n||  number of episodes (uncomplicated) ||
+|| 15 || nSevere  ||n||  number of episodes (severe) ||
+|| 16 || nSeq  ||n||  cases with sequelae ||
+|| 17 || nHospitalDeaths  ||n||  deaths in hospital ||
+|| 18 || nIndDeaths  ||n||  number of deaths (indirect) ||
+|| 19 || nDirDeaths  ||n||  number of deaths (direct) ||
+|| 20 || nEPIVaccinations ||n ||  number of EPI vaccine doses given ||
+|| 21 || allCauseIMR ||  || all cause infant mortality rate (returned as a single number over whole intervention period, instead of from a survey interval) ||
+|| 22 || nMassVaccinations  ||n||  number of Mass / Campaign vaccine doses given ||
+|| 23 || nHospitalRecovs  ||n||  recoveries in hospital ||
+|| 24 || nHospitalSeqs  ||n||  sequelae in hospital ||
+|| 25 || nIPTDoses  || n|| number of IPT Doses ||
+|| 26 || annAvgK   || || Annual Average Kappa. Calculated once a year as sum of human infectiousness divided by initial EIR summed over a year. Single value, not per age-group. ||
+|| 27 || nNMFever  || n ||  Number of episodes of non-malaria fever ||
+|| 28 || || || (removed) ||
+|| 29 || || || (removed) ||
+|| 30 || innoculationsPerAgeGroup ||n|| The total number of inoculations per age group, summed over the reporting period. ||
 
 Vector model outputs. These were point-time outputs, but some (just EIR?) have been converted to output averages.
 
@@ -75,9 +88,9 @@ The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single value
 || 35 || Vector_EIR_Input  ||  Input EIR (Expected EIR entered into scenario file) ||
 || 36 || Vector_EIR_Simulated  ||  Simulated EIR (EIR output by the vector model) ||
 
-Measures 37 and 38 were removed.
-
 || id || measure || description ||
+|| 37 || || || (removed) ||
+|| 38 || || || (removed) ||
 || 39 || Clinical_RDTs  ||  Number of Rapid Diagnostic Tests used ||
 || 40 || Clinical_DrugUsage  ||  Quantities of drugs used, per active ingredient abbreviation ||
 || 41 || Clinical_FirstDayDeaths  ||  Direct death on first day of CM (before treatment takes effect) ||
