--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -65,12 +65,12 @@ These tables come from [http://code.google.com/p/openmalaria/source/browse/trunk
 || 18 || nIndDeaths  ||n||  number of deaths (indirect) ||
 || 19 || nDirDeaths  ||n||  number of deaths (direct) ||
 || 20 || nEPIVaccinations ||n ||  number of EPI vaccine doses given ||
-|| 21 || allCauseIMR ||  || all cause infant mortality rate (returned as a single number over whole intervention period, instead of from a survey interval) ||
+|| 21 || allCauseIMR || n || all cause infant mortality rate (returned as a single number over whole intervention period, instead of from a survey interval) ||
 || 22 || nMassVaccinations  ||n||  number of Mass / Campaign vaccine doses given ||
 || 23 || nHospitalRecovs  ||n||  recoveries in hospital ||
 || 24 || nHospitalSeqs  ||n||  sequelae in hospital ||
 || 25 || nIPTDoses  || n|| number of IPT Doses ||
-|| 26 || annAvgK   || || Annual Average Kappa. Calculated once a year as sum of human infectiousness divided by initial EIR summed over a year. Single value, not per age-group. ||
+|| 26 || annAvgK   || n|| Annual Average Kappa. Calculated once a year as sum of human infectiousness divided by initial EIR summed over a year. Single value, not per age-group. ||
 || 27 || nNMFever  || n ||  Number of episodes of non-malaria fever ||
 || 28 || || || (removed) ||
 || 29 || || || (removed) ||
@@ -80,19 +80,19 @@ Vector model outputs. These were point-time outputs, but some (just EIR?) have b
 
 The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single values.
 
-|| id || measure || description ||
-|| 31 || Vector_Nv0 || Mosquito emergence rate. ||
-|| 32 || Vector_Nv  ||  Mosquito population size ||
-|| 33 || Vector_Ov  ||  Number of infected mosquitoes ||
-|| 34 || Vector_Sv  ||  Number of infectious mosquitoes ||
-|| 35 || Vector_EIR_Input  ||  Input EIR (Expected EIR entered into scenario file) ||
-|| 36 || Vector_EIR_Simulated  ||  Simulated EIR (EIR output by the vector model) ||
+|| id || measure || cohort || description ||
+|| 31 || Vector_Nv0 || n || Mosquito emergence rate. ||
+|| 32 || Vector_Nv  || n ||  Mosquito population size ||
+|| 33 || Vector_Ov  || n ||  Number of infected mosquitoes ||
+|| 34 || Vector_Sv  || n ||  Number of infectious mosquitoes ||
+|| 35 || Vector_EIR_Input  || n ||  Input EIR (Expected EIR entered into scenario file) ||
+|| 36 || Vector_EIR_Simulated  || n ||  Simulated EIR (EIR output by the vector model) ||
 
-|| id || measure || description ||
+|| id || measure || cohort || description ||
 || 37 || || || (removed) ||
 || 38 || || || (removed) ||
-|| 39 || Clinical_RDTs  ||  Number of Rapid Diagnostic Tests used ||
-|| 40 || Clinical_DrugUsage  ||  Quantities of drugs used, per active ingredient abbreviation ||
-|| 41 || Clinical_FirstDayDeaths  ||  Direct death on first day of CM (before treatment takes effect) ||
-|| 42 || Clinical_HospitalFirstDayDeaths  ||  Direct death on first day of CM (before treatment takes effect); hospital only ||
-|| 43 || nNewInfections || The number of actual infections since the last survey, per age group. ||
+|| 39 || Clinical_RDTs  || n ||  Number of Rapid Diagnostic Tests used ||
+|| 40 || Clinical_DrugUsage  || n ||  Quantities of drugs used, per active ingredient abbreviation ||
+|| 41 || Clinical_FirstDayDeaths  || n ||  Direct death on first day of CM (before treatment takes effect) ||
+|| 42 || Clinical_HospitalFirstDayDeaths  || n ||  Direct death on first day of CM (before treatment takes effect); hospital only ||
+|| 43 || nNewInfections || y || The number of actual infections since the last survey, per age group. ||
