Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1272 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -11,6 +11,7 @@
      * [XmlUpdateScenario Updating schema version]
   * *[OutputFiles Outputs: interpreting results]*
      * LiveGraph
+  * [Terminology]
 
 ===Code===
   * [Code#Source_code Source]
