--- a/wiki/Terminology.wiki
+++ b/wiki/Terminology.wiki
@@ -18,15 +18,26 @@ Syntax:
 </wiki:comment>
 
 <dl>
+  <dd>In our 1 day time-step clinical model, we consider a *bout* of sickness to be a fever or severe illness that usually lasts no more than 5 days. When an individual recovers (or dies), that bout is considered over. </dd>
   <dt>Bout</dt>
-  <dd>In our 1 day time-step clinical model, we consider a *bout* of (malarial) sickness as becoming sick and recovering again.</dd>
+  <dd>In our 1 day time-step clinical model, a *bout* of sickness is considered to be a fever or severe illness that usually lasts no more than 5 days. When an individual recovers (or dies), that bout is considered over. </dd>
+  <dt>Event</dt> 
+  <dd>In the clinical models, an occurrence without measurable duration.</dd>
+  <dt>Episode</dt>
+  <dd>The health-system's reporting unit; only one malaria episode is possible in a 30-day period. Therefore, each bout is either considered the start of a new episode, or, if it occurs within 30 days of a previous bout, part of the same episode. Thus, at least in low transmission settings, an episode should roughly correspond to one malaria infection (which can cause multiple bouts). An episode's severity (non-malarial, malarial or severe) is considered to be that of its worst bout.</dd>
+  <dt>Health system memory</dt>
+  <dd>The pre-determined, fixed period of time, currently set at 30 days, during which all bouts of illness are considered to be related to the same infection. The health system memory has implications for reporting and for treatment practices.</dd>
+  <dt>Severe malaria</dt>
+  <dd>Clinical malaria illness that is life-threatening if left untreated.</dd>
+  <dt>Non-malarial fever</dt>
+  <dd>A febrile illness, accompanied or not by parasites in the blood, which is not caused by malaria parasites.</dd>
   <dt>Component</dt>
   <dd>The simulator is divided up into several *components*: e.g. within-host, transmission, health-system. From a computing perspective these may be called _interfaces_.</dd>
   <dt>Implementation</dt>
   <dd>Each _component_ needs at least one *implementation*, describing how the relevent processes are simulated. Logically, these can also be called _models_.</dd>
   <dt>Intervention</dt>
-  <dd>During the a simulation of a _scenario_, some type of *intervention* may be used, usually with the aim of reducing malaria prevelence or its costs. These _interventions_ may be deployed at a point in time (*timed* mode) or whenever humans reach a certain age (*continuous* mode).</dd>
-  <dd>The deployment methods for deploying interventions in _OpenMalaria_ have also been effective to cause some other effects, leading to these effectors being named *pseudo interventions* (see [ModelInterventions#Pseudo_interventions examples]).</dd>
+  <dd>During the a simulation of a _scenario_, some type of *intervention* may be used, usually with the aim of reducing malaria transmission, prevalence, clinical manifestations or costs. These _interventions_ may be deployed at a point in time (*timed* mode) or whenever humans reach a certain age (*continuous* mode).</dd>
+  <dd>The methods for simulating the deployment of interventions in _OpenMalaria_ have also been used to simulate the effects of other phenomena which are not interventions, therefore termed *pseudo interventions* (see [ModelInterventions#Pseudo_interventions examples]).</dd>
   <dt>Model</dt>
   <dd>The openmalaria simulator platform supports several *models*: each is a selection of options (including a choice of _implementations_) defining how _scenarios_ are simulated.</dd>
   <dd>In the past, both _components_ and _implementations_ have been referred to as *models*.</dd>
